# podcast_ads

./: .env.example  .gitignore  README.md  crime_short.json  pyproject.toml  run.py  whisper_engine_android.py
android/: setup_termux_opener.sh
src/podcast_ads/: __init__.py  ai_engine.py  main.py  media_downloader.py  player.py  processor.py  utils.py
